# Q3_25_Builder_MahmoudFathy

./: .gitignore  Anchor.toml  README.md  keygen.ts  package-lock.json  package.json  pnpm-lock.yaml  transfer.ts
anchor-amm-q3/: README.md
anchor-dice-q3/: README.md  notes.md
anchor-dice-q3/tests/: anchor-dice-q3.ts
anchor-escrow-q3/: README.md
anchor-escrow-q3/tests/: anchor-escrow-q3.ts
anchor-marketplace-q3/: Anchor.toml
anchor-nft-staking-q3/: README.md  package.json
anchor-nft-staking-q3/tests/: anchor-nft-staking-q3.ts
anchor-vault-q3/: README.md
anchor-vault-q3/tests/: anchor-vault-q3.ts
capstone-airpay/: Anchor.toml  pnpm-lock.yaml
capstone-airpay-q3/phoenix_dapp/: .gitignore
capstone-airpay-q3/tests/: capstone-airpay-q3.ts
capstone-airpay/phoenix_dapp/: mix.exs
capstone-airpay/tests/: capstone-airpay-q3.ts
phoenix_dapp/: README.md
phoenix_dapp/assets/: package.json
phoenix_dapp/config/: config.exs  test.exs
phoenix_dapp/lib/: phoenix_dapp.ex
prereq-rs/: Cargo.toml
prereq-ts/: airdrop.ts  enroll.ts  package.json
programs/: Turbin3_prereq.ts
programs/anchor-nft-staking-q3/: Cargo.toml
programs/anchor-nft-staking-q3/src/: lib.rs
programs/anchor-nft-staking-q3/src/instructions/: initialize_config.rs  mod.rs  unstake.rs
programs/anchor-nft-staking-q3/src/state/: mod.rs  stake_account.rs  user_account.rs
scripts/: generate-clients.ts
src/: constants.rs  lib.rs
tests/: anchor-escrow-q3.ts  anchor-marketplace-q3.ts  anchor-nft-staking-q3.ts  anchor-vault-q3.ts
ts/: package.json
ts/cluster1/: nft_image.ts  (+1 more)
(+89 files in other folders)
